more minor restructuring :)

--- a/main.tex
+++ b/main.tex
@@ -107,22 +107,27 @@
 		\begin{theorem}
 			Let $F$ be an arbitrary ordered field. Then $F$ has the least-upper-bound property if and only if it is archimedean and cauchy complete.
 		\end{theorem}
+		\subsection{Alternative completeness properties}
+		
 	\chapter{Topology}
 		\section{Topological Spaces}
 		\section{Metric Spaces}
+		\section{Uniform Spaces}
 	\chapter{Topological Vector Spaces}
-		\section{Topological Vector Spaces}
 		\section{Normed Vector Spaces}
 		\section{Banach Spaces}
+		\section{Hilbert Spaces}
+		\section{Topological Vector Spaces}
 	\chapter{Differentiation}
+		\section{The Frechét Derivative}
 		\section{Frechét Spaces}
 		\section{The Gateaux Derivative}
-		\section{The Frechét Derivative}
 	\chapter{Measure Theory}
 		\section{Set Algebras}
 		\section{Measure Spaces}
 		\section{The Lebesque Measure}
 	\chapter{Integration}
+		\section{The Lebesque Integral}
 		\section{The Bochner Integral}
 		
 \end{document}
