--- a/macros-and-packages-en.tex
+++ b/macros-and-packages-en.tex
@@ -42,6 +42,7 @@
 \usepackage[osf, helvratio=.9]{newpxtext} % text font
 \usepackage{newpxmath} % math font
 
+
 %--- RENEWED COMMANDS ---
 
 % Variant Greek Letters
@@ -92,7 +93,7 @@
 \newcommand{\symdiff}{\vartriangle}
 \newcommand{\trans}{\twoheadrightarrow}
 \newcommand{\tensor}{\otimes}
-\newcommand{\bigmid}{~\middle|~}
+\renewcommand{\mid}{~\middle|~}
 
 %--- STUFF IN FANCY BRACKETS ---
 \newcommand{\scalar}[2]{\left\langle #1, #2 \right\rangle}
@@ -200,7 +201,7 @@
 \newcommand{\sgn}{\textnormal{sgn}}
 \renewcommand{\char}{\textnormal{char}}
 \newcommand{\Frac}{\textnormal{Frac}}
-\newcommand{\Irr}{\textnormal{Irr}}
+\newcommand{\card}{\textnormal{card}}
 
 % groups and sets
 \newcommand{\GL}{\text{GL}}
@@ -230,7 +231,7 @@
 \newtheorem{definition}[lemma]{Definition}
 \newtheorem{example}[lemma]{Example}
 \newtheorem{counterexample}[lemma]{Counterexample}
-\newtheorem{beobachtung}[lemma]{Beobachtung}
+\newtheorem{observation}[lemma]{Observation}
 \newtheorem{anmerkung}[lemma]{Comment}
 \newtheorem{question}[lemma]{Question}
 \newtheorem{application}[lemma]{Application}
