--- a/macros-and-packages-en.tex
+++ b/macros-and-packages-en.tex
@@ -129,6 +129,8 @@
 \renewcommand{\mid}{~\middle|~}
 
 %--- STUFF IN FANCY BRACKETS ---
+\newcommand{\stack}[2]{\begin{array}{c} #1\\#2\end{array}}
+\newcommand{\trinom}[3]{\begin{pmatrix} #1\\#2\\#3\end{pmatrix}}
 \newcommand{\scalar}[2]{\left\langle #1, #2 \right\rangle}
 \newcommand{\angles}[1]{\left\langle #1 \right\rangle}
 \newcommand{\lr}{\qty}
